--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -7,10 +7,7 @@
 
         <section class="about_part section_padding">
             <div class="container">
-                <div class="row align-items-center justify-content-between">
-
-                    <div class="col-lg-6" id="diseaseInfo" style="width: 900px; height: 500px;"></div>
-
+                <div class="row align-items-center align-content-between">
                     <table id="diseaseTable">
                         <tbody id="diseaseList">
                             <tr th:each="disease : ${diseases}" hidden="true">
@@ -19,7 +16,8 @@
                             </tr>
                         </tbody>
                     </table>
-                    <div class="col-lg-6" id="diagnosisInfo" style="width: 900px; height: 500px;"></div>
+                    <div class="col-md-6" id="diagPieChart" style="width: 900px; height: 500px;"></div>
+                    <div class="col-md-6" id="diagHistogram" style="width: 900px; height: 500px;"></div>
                 </div>
             </div>
         </section>
@@ -27,32 +25,9 @@
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript">
             google.charts.load('current', {'packages':['corechart']});
-            google.charts.setOnLoadCallback(drawChart1);
+            google.charts.setOnLoadCallback(drawPieChart);
 
-            function drawChart1() {
-
-                var data = google.visualization.arrayToDataTable([
-                    ['질병', '빈도'],
-                    ['감기', 11],
-                    ['독감', 2],
-                    ['골절', 2],
-                    ['당뇨', 2],
-                    ['코로나', 7]
-                ]);
-
-                var options = {
-                    title: '전체 질병 정보'
-                };
-
-                var chart = new google.visualization.PieChart(document.getElementById('diseaseInfo'));
-
-                chart.draw(data, options);
-            }
-
-            google.charts.load('current', {'packages':['corechart']});
-            google.charts.setOnLoadCallback(drawChart2);
-
-            function drawChart2() {
+            function drawPieChart() {
 
                 let diseaseRows = document.getElementsByTagName("tr");
 
@@ -80,11 +55,47 @@
                 var data = google.visualization.arrayToDataTable(diseaseData);
 
                 var options = {
-                    title: '진단 질병 정보'
+                    title: '진단 질병 정보 (파이 그래프)'
                 };
 
-                var chart = new google.visualization.PieChart(document.getElementById('diagnosisInfo'));
+                var chart = new google.visualization.PieChart(document.getElementById('diagPieChart'));
 
+                chart.draw(data, options);
+            }
+
+            google.charts.load("current", {packages:["corechart"]});
+            google.charts.setOnLoadCallback(drawHistogram);
+            function drawHistogram() {
+
+                let diseaseRows = document.getElementsByTagName("tr");
+
+                let diseaseType = [];
+                let diseaseCount = [];
+                for(let i = 0; i < diseaseRows.length; i++) {
+                    diseaseType.push(diseaseRows[i].children[0].textContent);
+                    diseaseCount.push(parseInt(diseaseRows[i].children[1].textContent));
+                }
+
+                let diseaseData = [];
+                diseaseData.push(['질병', '빈도']);
+
+                for(let i = 0; i < diseaseRows.length; i++) {
+                    let tempData = [];
+                    tempData.push(diseaseType[i]);
+                    tempData.push(diseaseCount[i]);
+
+                    diseaseData.push(tempData);
+                }
+
+                var data = google.visualization.arrayToDataTable(diseaseData);
+
+                var options = {
+                    title: '진단 질병 정보 (히스토그램)',
+                    legend: { position: 'none' },
+                    colors: ['navy'],
+                };
+
+                var chart = new google.visualization.Histogram(document.getElementById('diagHistogram'));
                 chart.draw(data, options);
             }
         </script>
