style: Modify the title for each graph

--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -57,7 +57,7 @@
                 var data = google.visualization.arrayToDataTable(diseaseData);
 
                 var options = {
-                    title: '진단 질병 정보 (파이 그래프)'
+                    title: '질병 진단 정보 (파이 그래프)'
                 };
 
                 var chart = new google.visualization.PieChart(document.getElementById('diagPieChart'));
@@ -92,7 +92,7 @@
                 var data = google.visualization.arrayToDataTable(diseaseData);
 
                 var options = {
-                    title: '진단 질병 정보 (히스토그램)',
+                    title: '질병 진단 정보 (히스토그램)',
                     legend: { position: 'none' },
                     colors: ['navy'],
                 };
@@ -129,7 +129,7 @@
                 var data = google.visualization.arrayToDataTable(diseaseData);
 
                 var options = {
-                    title: '진단 질병 정보 (막대 그래프)',
+                    title: '질병 진단 정보 (막대 그래프)',
                     chartArea: {width: '50%'},
                     hAxis: {
                         title: '빈도',
@@ -172,7 +172,7 @@
                 var data = google.visualization.arrayToDataTable(diseaseData);
 
                 var options = {
-                    title: '진단 질병 정보 (계단 그래프)',
+                    title: '질병 진단 정보 (계단 그래프)',
                     vAxis: {title: '빈도'},
                     isStacked: true
                 };
