--- a/src/main/resources/templates/members/recommends/recommendation.html
+++ b/src/main/resources/templates/members/recommends/recommendation.html
@@ -11,9 +11,9 @@
                     <!-- header -->
                     <div class="modal-header">
                         <!-- 닫기(x) 버튼 -->
-                        <button type="button" class="close" data-dismiss="modal">×</button>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">×</button>
                         <!-- header title -->
-                        <h4 class="modal-title"><b>예약하기</b></h4>
+                        <!--<h4 class="modal-title"><b>예약하기</b></h4>-->
                     </div>
                     <!-- body -->
                     <div class="modal-body">
@@ -33,7 +33,7 @@
                         </p>
                         <p>
                             <b>상세내용 :  </b>
-                            <input type="text" id="description"></p>
+                             <input type="text" id="description" class="form-control"></p>
                     </div>
                     <br/>
 
