--- a/src/main/resources/templates/memberAuth/signUp.html
+++ b/src/main/resources/templates/memberAuth/signUp.html
@@ -22,14 +22,23 @@
                         <div class="form-group">
                             <label th:for="email">이메일</label>
                             <input type="email" th:field="*{email}" class="form-control"
-                                   id="user_email" placeholder="이메일을 입력해주세요 ('@' 포함해주세요)"  required>
+                                   id="user_email" placeholder="이메일을 입력해주세요 ('@' 포함해주세요)" required>
                             <div class="check_font" id="email_check"></div>
                         </div>
 
                         <div class="form-group">
                             <label th:for="password">비밀번호</label>
-                            <input type="password" th:field="*{password}" class="form-control"
-                                   placeholder="비밀번호를 입력해주세요" required>
+                            <input type="password" th:field="*{pwd}" class="form-control"
+                               id="user_password"   placeholder="비밀번호를 입력해주세요" required>
+
+
+                        </div>
+
+                        <div class = "form-group">
+                            <label th:for="password2">비밀번호 확인</label>
+                            <input  type="password" th:field = "*{password}" class = "form-control"
+                                    id="user_password2" placeholder="비밀번호를 확인해주세요" required>
+                            <div class="check_font" id="pwd_check"></div>
                         </div>
 
                         <div class="form-group">
@@ -105,7 +114,6 @@
             // 아이디 유효성 검사(1 = 중복 / 0 != 중복)
             $(document).ready(function(){
                 $("#user_email").blur(function() {
-                    console.log("왜 안돼요?");
                     $.ajax({
                         type: "POST",
                         contentType: "application/json",
@@ -113,7 +121,7 @@
                         data: JSON.stringify({"user_email" : $('#user_email').val()}),
                         dataType: 'json',
                         success: function (data) {
-                            console.log("1 = 중복o / 0 = 중복x : "+ data);
+                            console.log("1 = 중복이다 / 0 = 중복아니다 : "+ data);
 
                             if (data == 1) {
                                 // 1 : 이메일이 중복되는 문구
@@ -137,6 +145,26 @@
                             console.log("실패");
                         }
                     });
+                });
+
+            // 비빌번호, 비빌번호 확인 라벨 비교 구문
+                $("#user_password2").blur(function(){
+
+                    const pw1 = $('#user_password').val();
+                    const pw2 = $('#user_password2').val();
+                    if(pw1 === pw2){
+                        console.log("true")
+                        $("#pwd_check").text("패스워드가 일치합니다 :) ");
+                        $("#pwd_check").css("color", "blue");
+                    }
+                    else if(pw2 == null){
+                        console.log("넑값 잡히니?")
+                    }
+                    else{
+                        $("#pwd_check").text("패스워드가 일치하지 않습니다 :p ");
+                        $("#pwd_check").css("color", "red");
+                        $("#user_password").focus();
+                    }
                 });
             });
         </script>
