feat : The Outside Server(FLASK) linked SpringBoot Project!!

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -60,7 +60,7 @@
                                             <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" th:href="@{/member/mypage}">정보조회</a>
                                             <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/dog/save">반려견 정보 등록</a>
                                             <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/dogs">반려견 정보 조회</a>
-                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="#">질병 진단 결과 조회</a>
+                                            <a sec:authorize="hasRole('ROLE_MEMBER')" class="dropdown-item" href="/member/disease/chart">질병 진단 결과 조회</a>
                                         </div>
                                     </li>
 
