--- a/src/main/resources/templates/members/recommends/recommendation.html
+++ b/src/main/resources/templates/members/recommends/recommendation.html
@@ -49,8 +49,8 @@
                 <div class="option">
                     <div>
                         <form onsubmit="searchPlaces(); return false;">
-                            키워드 : <input type="text" th:field="${member.address.city}" id="keyword" size="15">
-                            <button type="submit">검색하기</button>
+                            키워드 : <input type="text" th:field="${member.address.city}" id="keyword" size="24">
+<!--                            <button type="submit">검색하기</button>-->
                         </form>
                     </div>
                 </div>
