--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -14,10 +14,15 @@
                                 <td th:text="${disease.type}" id="diseaseType"></td>
                                 <td th:text="${disease.count}" id="typeCount"></td>
                             </tr>
+
+                            <tr th:each="disease : ${diseasesAll}">
+
+                            </tr>
                         </tbody>
                     </table>
                     <div class="col-md-6" id="diagPieChart" style="width: 900px; height: 500px;"></div>
-                    <div class="col-md-6" id="diagHistogram" style="width: 900px; height: 500px;"></div>
+                    <div class="col-md-6" id="diagTreemap" style="width: 900px; height: 500px;"></div>
+<!--                    <div class="col-md-6" id="diagHistogram" style="width: 900px; height: 500px;"></div>-->
                     <div class="col-md-6" id="diagBarChart" style="width: 900px; height: 500px;"></div>
                     <div class="col-md-6" id="diagStepChart" style="width: 900px; height: 500px;"></div>
                 </div>
@@ -65,41 +70,90 @@
                 chart.draw(data, options);
             }
 
-            google.charts.load("current", {packages:["corechart"]});
-            google.charts.setOnLoadCallback(drawHistogram);
-            function drawHistogram() {
+            google.charts.load('current', {'packages':['treemap']});
+            google.charts.setOnLoadCallback(drawTreemap);
 
-                let diseaseRows = document.getElementsByTagName("tr");
+            function drawTreemap() {
+                var data = google.visualization.arrayToDataTable([
+                    ['질병명', '질병타입', 'Market trade volume (size)', 'Market increase/decrease (color)'],
+                    ['질병',    null,                 0,                               0],
+                    ['America',   'Global',             0,                               0],
+                    ['Europe',    'Global',             0,                               0],
+                    ['Asia',      'Global',             0,                               0],
+                    ['Australia', 'Global',             0,                               0],
+                    ['Africa',    'Global',             0,                               0],
+                    ['Brazil',    'America',            11,                              10],
+                    ['USA',       'America',            52,                              31],
+                    ['Mexico',    'America',            24,                              12],
+                    ['Canada',    'America',            16,                              -23],
+                    ['France',    'Europe',             42,                              -11],
+                    ['Germany',   'Europe',             31,                              -2],
+                    ['Sweden',    'Europe',             22,                              -13],
+                    ['Italy',     'Europe',             17,                              4],
+                    ['UK',        'Europe',             21,                              -5],
+                    ['China',     'Asia',               36,                              4],
+                    ['Japan',     'Asia',               20,                              -12],
+                    ['India',     'Asia',               40,                              63],
+                    ['Laos',      'Asia',               4,                               34],
+                    ['Mongolia',  'Asia',               1,                               -5],
+                    ['Israel',    'Asia',               12,                              24],
+                    ['Iran',      'Asia',               18,                              13],
+                    ['Pakistan',  'Asia',               11,                              -52],
+                    ['Egypt',     'Africa',             21,                              0],
+                    ['S. Africa', 'Africa',             30,                              43],
+                    ['Sudan',     'Africa',             12,                              2],
+                    ['Congo',     'Africa',             10,                              12],
+                    ['Zaire',     'Africa',             8,                               10]
+                ]);
 
-                let diseaseType = [];
-                let diseaseCount = [];
-                for(let i = 0; i < diseaseRows.length; i++) {
-                    diseaseType.push(diseaseRows[i].children[0].textContent);
-                    diseaseCount.push(parseInt(diseaseRows[i].children[1].textContent));
-                }
+                tree = new google.visualization.TreeMap(document.getElementById('diagTreemap'));
 
-                let diseaseData = [];
-                diseaseData.push(['질병', '빈도']);
+                tree.draw(data, {
+                    minColor: '#f00',
+                    midColor: '#ddd',
+                    maxColor: '#0d0',
+                    headerHeight: 15,
+                    fontColor: 'black',
+                    showScale: true
+                });
 
-                for(let i = 0; i < diseaseRows.length; i++) {
-                    let tempData = [];
-                    tempData.push(diseaseType[i]);
-                    tempData.push(diseaseCount[i]);
-
-                    diseaseData.push(tempData);
-                }
-
-                var data = google.visualization.arrayToDataTable(diseaseData);
-
-                var options = {
-                    title: '질병 진단 정보 (히스토그램)',
-                    legend: { position: 'none' },
-                    colors: ['navy'],
-                };
-
-                var chart = new google.visualization.Histogram(document.getElementById('diagHistogram'));
-                chart.draw(data, options);
             }
+
+            // google.charts.load("current", {packages:["corechart"]});
+            // google.charts.setOnLoadCallback(drawHistogram);
+            // function drawHistogram() {
+            //
+            //     let diseaseRows = document.getElementsByTagName("tr");
+            //
+            //     let diseaseType = [];
+            //     let diseaseCount = [];
+            //     for(let i = 0; i < diseaseRows.length; i++) {
+            //         diseaseType.push(diseaseRows[i].children[0].textContent);
+            //         diseaseCount.push(parseInt(diseaseRows[i].children[1].textContent));
+            //     }
+            //
+            //     let diseaseData = [];
+            //     diseaseData.push(['질병', '빈도']);
+            //
+            //     for(let i = 0; i < diseaseRows.length; i++) {
+            //         let tempData = [];
+            //         tempData.push(diseaseType[i]);
+            //         tempData.push(diseaseCount[i]);
+            //
+            //         diseaseData.push(tempData);
+            //     }
+            //
+            //     var data = google.visualization.arrayToDataTable(diseaseData);
+            //
+            //     var options = {
+            //         title: '질병 진단 정보 (히스토그램)',
+            //         legend: { position: 'none' },
+            //         colors: ['navy'],
+            //     };
+            //
+            //     var chart = new google.visualization.Histogram(document.getElementById('diagHistogram'));
+            //     chart.draw(data, options);
+            // }
 
             google.charts.load('current', {packages: ['corechart', 'bar']});
             google.charts.setOnLoadCallback(drawBarChart);
