--- a/src/main/resources/templates/members/recommends/recommendation.html
+++ b/src/main/resources/templates/members/recommends/recommendation.html
@@ -4,6 +4,14 @@
         <link rel="stylesheet" href="/../../../static/css/kakao.css">
     <body>
         <header th:replace="fragments/header :: headerFragment"></header>
+
+        <div class="form-group">
+
+            <h2 th:text = "${Diagnosis}">: 병명</h2>
+            <h2 th:text="${Corna}">: 코로나확률</h2>
+            <h2 th:text="${Bronchus}">: 기관지염확률</h2>
+            <h2 th:text="${Makana}">: 마카다미아확률</h2>
+        </div>
         <!-- 예약하기 모달창 양식 구현-->
         <div class="modal fade" id="modal_div">
             <div class="modal-dialog">
