--- a/src/main/resources/templates/memberAuth/settings.html
+++ b/src/main/resources/templates/memberAuth/settings.html
@@ -17,14 +17,60 @@
                             <input type="text" id="memberName" th:field="${member.name}" class="form-control" readonly required>
                         </div>
 
+
+                        <div class="form-group">
+                            <label th:for="zipcode">비밀번호</label>
+                            <div class="form-inline form-group">
+                                <input type="password" th:value="${member.password}" class="form-control" readonly required>
+                                <input type="button" id="memberPassword"
+                                       class="btn btn-info" value="비밀번호 변경"><br>
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <label th:for="email">이메일</label>
                             <input type="email" id="memberEmail" th:field="${member.email}" class="form-control" readonly required>
                         </div>
 
-                        <div class="form-group">
-                            <label th:for="password">비밀번호</label>
-                            <input type="password" id="memberPassword" th:value="${member.password}" class="form-control" required>
+
+
+
+                <!--  비번변경 모달창 양식 구현  -->
+                        <div class="modal fade" id="modal_div">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <!-- header -->
+                                    <div class ="modal-header">
+                                    <!-- 닫기(X) 버튼-->
+
+                                    <!--  header title   -->
+<!--                                        <h4 class="modal-title"><b>패스워드변경하기</b></h4>-->
+                                    </div>
+                                    <!-- body -->
+                                    <div class="modal-body">
+                                        <p>
+                                            <button type="button" class="close" data-dismiss="modal">x</button>
+                                            <b>변경할 비밀번호</b>
+
+                                            <div class="form-option">
+                                                <input type="password"  class="form-control"
+                                                    id="user_password"   placeholder="비밀번호를 입력해주세요" required>
+                                            </div>
+                                        </p>
+                                        <br/>
+                                        <p>
+                                            <b>변경할 비밀번호 확인</b>
+                                        <div class="form-option">
+                                            <input type="password"  class="form-control"
+                                                   id="user2_password"   placeholder="비밀번호를 입력해주세요" required>
+                                        <div class="check_font" id="pwd_check"></div>
+                                        </div>
+                                        </p>
+                                    </div>
+                                    <br/>
+                                        <button type="button" class="btn btn-info" onclick="completePwdModify()">비밀번호 변경</button>
+                                </div>
+                            </div>
                         </div>
 
 
@@ -75,7 +121,10 @@
             </div>
         </div>
 
+        <script src="/../../static/vendor/jquery/jquery-3.2.1.min.js"></script>
         <script th:inline="javascript">
+
+
             function update() {
                 var data = {                                  // 이름, 이메일, 생일 변경 불가
                     password: $("#memberPassword").val(),     // 비밀번호, 전화번호, 주소, 상세주소, 참고항목 변경 가능
@@ -87,7 +136,7 @@
 
                 console.log(data);
 
-                var id = $("#memberId").val();
+                let id = $("#memberId").val();
 
                 $.ajax({
                     type: 'PUT',
@@ -127,9 +176,78 @@
 
                 console.log(data);
             }
+
+
+            // 비밀번호 변경버튼 클릭시 모달창을 띄우는 이벤트
+            $(function() {
+                $("[id^=memberPassword]").click(function () {
+
+
+                        // idx = $(this).attr("data-idx");
+                    // hospital_name = $("#hospital_name" + idx).html();
+                    // road = $("#road" + idx).html();
+                    // tel = $("#tel" + idx).html();
+                    //
+                    // let data = {
+                    //       hospital_name : hospital_name,
+                    //       hospital_adrr : road,
+                    //       tel : tel
+                    // };
+                    //  console.log(data);
+                    $("#modal_div").modal();
+                });
+            });
+
+            //패스워드 변경하기 클릭 -> 백엔드
+            function completePwdModify(){
+                let data = {
+                    password: $("#user_password").val(),
+                    password2: $("#user2_password").val()
+                }
+                let id = $("#memberId").val();
+
+                $.ajax({
+                    type: 'PUT',
+                    url: '/api/member/settingsPwd/' + id,
+                    dataType: 'json',
+                    contentType: 'application/json; charset=utf-8',
+                    data: JSON.stringify(data)
+                }).done(function() {
+                    alert('패스워드 수정되었습니다!');
+                    window.location.href = "/member/settings/"+id;
+                }).fail(function(request, status, error) {
+                    alert("패스워드를 다시 확인해 주세요!");
+                    window.location.href = "/member/settings/"+id;
+                });
+
+            }
+
+            // 비빌번호, 비빌번호 확인 라벨 비교 구문
+            // $("#user2_password").blur(function(){
+            //
+            //     const pw1 = $('#user_password').val();
+            //     const pw2 = $('#user2_password').val();
+            //     if(pw1 === pw2){
+            //         console.log("true")
+            //         $("#pwd_check").text("패스워드가 일치합니다 :) ");
+            //         $("#pwd_check").css("color", "blue");
+            //     }
+            //     else if(pw2 == null){
+            //         console.log("넑값 잡히니?")
+            //     }
+            //     else{
+            //         $("#pwd_check").text("패스워드가 일치하지 않습니다 :p ");
+            //         $("#pwd_check").css("color", "red");
+            //         $("#user_password").focus();
+            //     }
+            // });
         </script>
 
         <div id="dropDownSelect1"></div>
+
+        <style>
+
+        </style>
 
         <!--===============================================================================================-->
         <script src="/../../static/vendor/jquery/jquery-3.2.1.min.js"></script>
