--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" href="/../../../static/leopet/css/magnific-popup.css">
         <!-- style CSS -->
         <link rel="stylesheet" href="/../../../static/leopet/css/style.css">
+        <link rel="stylesheet" href="/../../static/css/multiselect.css">
 
         <!--===============================================================================================-->
         <!-- vender의 favicon 참조 삭제 -->
