--- a/src/main/resources/templates/memberAuth/signUp.html
+++ b/src/main/resources/templates/memberAuth/signUp.html
@@ -125,18 +125,23 @@
 
                             if (data == 1) {
                                 // 1 : 이메일이 중복되는 문구
-                                $("#email_check").text("사용중인 이메일입니다 :p");
+                                $("#email_check").text("사용중인 이메일입니다. :p");
                                 $("#email_check").css("color", "red");
                                 $("#user_email").focus();
                             } else { // 0
                                 // 공백일 때 이메일 입력 문구
                                 if($('#user_email').val() == ""){
-                                        $('#email_check').text('이메일을 입력해주세요 :)');
+                                        $('#email_check').text('이메일을 입력해주세요. :)');
                                         $('#email_check').css('color', 'red');
                                         $("#user_email").focus();
+                                // 이메일 형식이 아닐 때('@'가 없는 경우)
+                                } else if($('#user_email').val().indexOf("@") == -1){
+                                    $("#email_check").text("이메일 형식이 아닙니다. :(");
+                                    $("#email_check").css("color", "red");
+                                    $("#user_email").focus();
                                 // 이메일이 사용가능한 문구
-                                }else{
-                                    $("#email_check").text("사용가능한 이메일입니다 :p");
+                                } else{
+                                    $("#email_check").text("사용가능한 이메일입니다. :p");
                                     $("#email_check").css("color", "blue");
                                 }
                             }
@@ -154,14 +159,14 @@
                     const pw2 = $('#user_password2').val();
                     if(pw1 === pw2){
                         console.log("true")
-                        $("#pwd_check").text("패스워드가 일치합니다 :) ");
+                        $("#pwd_check").text("패스워드가 일치합니다. :) ");
                         $("#pwd_check").css("color", "blue");
                     }
                     else if(pw2 == null){
                         console.log("넑값 잡히니?")
                     }
                     else{
-                        $("#pwd_check").text("패스워드가 일치하지 않습니다 :p ");
+                        $("#pwd_check").text("패스워드가 일치하지 않습니다. :p ");
                         $("#pwd_check").css("color", "red");
                         $("#user_password").focus();
                     }
